log

Thu 14 Mar 2024 08:38:15 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
f06b1d8
Thu 14 Mar 2024 08:41:20 PM UTC: 
 exercises.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:25:10: error: ‘max’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   25 |   return max;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
dfeffb8
Thu 14 Mar 2024 08:41:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
d992373
Thu 14 Mar 2024 08:44:17 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
7ab24ac
Thu 14 Mar 2024 08:45:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:7: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
   34 |   int temp = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
bf056be
